--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">chatLXD</string>
-
+    <string name="chat_list_remove_above_cancel_send">手指上滑，取消发送</string>
+    <string name="chat_list_rec_voice_short">录音时间太短</string>
+    <string name="chat_list_loosen_cancel_send">松开手指，取消发送</string>
     <string name="title">对话</string>
     <string name="records">录音</string>
     <string name="settings">设置</string>
