--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -238,7 +238,7 @@
 
 	<!-- Shown in the 'About' window of the app. -->
 	<string name="about_body"><![CDATA[
-    	<b>Audio Recorder 2023</b><br>
+    	<b>chat LXD 2023</b><br>
 		Version %s
 	]]></string>
 	<!--<a href="http://#/">Application site</a>-->
