--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,7 +237,7 @@
 
     <!-- Shown in the 'About' window of the app. -->
     <string name="about_body"><![CDATA[
-    	<b>Audio Recorder 2023</b><br>
+    	<b>chat LXD 2023</b><br>
 		Version %s
 	]]></string>
     <!--<a href="http://#/">Application site</a>-->
