--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">chatLXD</string>
+    <string name="app_name">无崖</string>
     <string name="chat_list_remove_above_cancel_send">手指上滑，取消发送</string>
     <string name="chat_list_rec_voice_short">录音时间太短</string>
     <string name="chat_list_loosen_cancel_send">松开手指，取消发送</string>
