--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-	<string name="app_name">chat LXD</string>
+	<string name="app_name">无崖</string>
 
 	<string name="records">Records</string>
 	<string name="settings">Settings</string>
@@ -7,8 +7,8 @@
 	<string name="welcome_1">Welcome to a simple and fast application</string>
 	<string name="welcome_2">Beautiful design and good functionality</string>
 	<string name="welcome_3">Select best settings and start recording</string>
-	<string name="title_1">chat LXD</string>
-	<string name="title_2">chat LXD</string>
+	<string name="title_1">无崖</string>
+	<string name="title_2">无崖</string>
 	<string name="title_3">Recordio Audier</string>
 	<string name="rate_app">Rate app</string>
 	<string name="store_records_public">Store records in a public dir</string>
@@ -238,7 +238,7 @@
 
 	<!-- Shown in the 'About' window of the app. -->
 	<string name="about_body"><![CDATA[
-    	<b>chat LXD 2023</b><br>
+    	<b>无崖 2023</b><br>
 		Version %s
 	]]></string>
 	<!--<a href="http://#/">Application site</a>-->
