--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">无崖</string>
+    <string name="app_name">无涯</string>
     <string name="chat_list_remove_above_cancel_send">手指上滑，取消发送</string>
     <string name="chat_list_rec_voice_short">录音时间太短</string>
     <string name="chat_list_loosen_cancel_send">松开手指，取消发送</string>
@@ -12,7 +12,7 @@
     <string name="welcome_3">选择最佳设置并开始录制</string>
     <string name="title_1">chatLXD</string>
     <string name="title_2">chatLXD</string>
-    <string name="title_3">无崖</string>
+    <string name="title_3">无涯</string>
     <string name="rate_app">评价应用</string>
     <string name="store_records_public">保存录音到Public目录</string>
     <string name="record_in_stereo">以双声道录制</string>
@@ -237,7 +237,7 @@
 
     <!-- Shown in the 'About' window of the app. -->
     <string name="about_body"><![CDATA[
-    	<b>无崖 2023</b><br>
+    	<b>无涯 2023</b><br>
 		Version %s
 	]]></string>
     <!--<a href="http://#/">Application site</a>-->
